[package]
name = "ggrs_p2p_box_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {workspace = true}
bevy_ggrs = {workspace = true}
ggrs = {workspace = true}
clap = {workspace = true}
bytemuck = {workspace = true, features=["derive"]}
[[bin]]
path = "src/box_game_p2p.rs"
name = "box_game_p2p"

[[bin]]
path = "src/box_game_spectator.rs"
name = "box_game_spectator"

[[bin]]
path = "src/box_game_synctest.rs"
name = "box_game_synctest"